sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: '(' expected but identifier found.
	do { if debut == 0 { debut += 1}
                ^